--- a/Python/FiguresOfTwoPump.ipynb
+++ b/Python/FiguresOfTwoPump.ipynb
@@ -14,22 +14,22 @@
     "from matplotlib.ticker import MaxNLocator\n",
     "import os\n",
     "from matplotlib import ticker\n",
-    "plt.rcParams['ytick.right']  =plt.rcParams['xtick.top'] =True\n",
+    "# plt.rcParams['ytick.right']  =plt.rcParams['xtick.top'] =True\n",
     "xminorLocator=MultipleLocator(2)\n",
     "def cm2inch(value):\n",
     "    return value/2.54\n",
-    "plt.rcParams['figure.figsize'] = (cm2inch(8), cm2inch(6.5))\n",
-    "plt.rcParams['lines.linewidth'] = 1\n",
-    "plt.rcParams['xtick.direction'] = 'in'\n",
-    "plt.rcParams['ytick.direction'] = 'in'\n",
-    "plt.rcParams['xtick.labelsize'] = 6\n",
-    "plt.rcParams['ytick.labelsize'] = 6\n",
-    "plt.rcParams['legend.fontsize'] = 6\n",
+    "# plt.rcParams['figure.figsize'] = (cm2inch(8), cm2inch(6.5))\n",
+    "# plt.rcParams['lines.linewidth'] = 1\n",
+    "# plt.rcParams['xtick.direction'] = 'in'\n",
+    "# plt.rcParams['ytick.direction'] = 'in'\n",
+    "# plt.rcParams['xtick.labelsize'] = 6\n",
+    "# plt.rcParams['ytick.labelsize'] = 6\n",
+    "# plt.rcParams['legend.fontsize'] = 6\n",
     "from matplotlib import rcParams\n",
     "config = {\n",
     "    \"text.usetex\": False,\n",
     "    \"font.family\":'serif',\n",
-    "    \"font.size\": 8,\n",
+    "    # \"font.size\": 8,\n",
     "    \"mathtext.fontset\":'stix',\n",
     "}\n",
     "rcParams.update(config)\n",
@@ -52,7 +52,8 @@
     "                             frameon=False,\n",
     "                             shadow=True,\n",
     "                             facecolor='gray',\n",
-    "                             prop={'weight':'bold','size':8},\n",
+    "                            #  prop={'weight':'bold','size':8},\n",
+    "                            prop={'weight':'bold'},\n",
     "                             **kwargs)\n",
     "    label_legend.remove()\n",
     "    ax.add_artist(label_legend)\n",
@@ -72,7 +73,8 @@
     "                             frameon=False,\n",
     "                             shadow=True,\n",
     "                             facecolor='gray',\n",
-    "                             prop={'weight':'bold','size':8},\n",
+    "                            #  prop={'weight':'bold','size':8},\n",
+    "                            prop={'weight':'bold'},\n",
     "                             **kwargs)\n",
     "    label_legend.remove()\n",
     "    ax.add_artist(label_legend)\n",
@@ -157,11 +159,13 @@
    "outputs": [],
    "source": [
     "levels=100\n",
-    "figureDPI=200\n",
+    "figureDPI=300\n",
     "figureType=\"jpeg\"\n",
     "timeUnit=\"fs\"\n",
     "dir='E:\\\\TwoPump\\\\'\n",
-    "outDir=dir+'picture\\\\'"
+    "outDir=dir+'picture1\\\\'\n",
+    "import scienceplots\n",
+    "plt.style.use(['nature','science'])"
    ]
   },
   {
@@ -170,40 +174,81 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "intDir=dir+\"molecularData\\\\\"\n",
-    "plt.figure(figsize=(cm2inch(16),cm2inch(6.5)))\n",
-    "ax=plt.subplot(1,2,1)\n",
-    "data=np.loadtxt(intDir+\"PotentialEnergy.dat\")\n",
-    "#np.savetxt(outDir+\"data\\\\f1(1)PotentialEnergy.dat\",data)\n",
-    "x =data[:,0]\n",
-    "y1=data[:,1]\n",
-    "y2=data[:,2]\n",
-    "y3=data[:,3]\n",
-    "#plt.grid(False)\n",
-    "x=x\n",
-    "y=y3\n",
-    "setlabelm(ax,'(a)',[-0.2,1.001])\n",
-    "plt.xlabel('$R$ (a.u.)')\n",
-    "plt.ylabel(\"Intensity (a.u.)\")\n",
-    "plt.plot(x,y1,'k-',x,y2,'r-.',x,y3,'b--')\n",
-    "plt.xlim(1.75,11)\n",
-    "plt.fill_between(x,y3,x,y3+0.2)\n",
-    "plt.ylim(-0.05,0.5)\n",
-    "plt.legend(['$X^1\\\\Sigma^+$','$A^1 \\\\Sigma ^+$','$X^2 \\\\Sigma ^+$'],loc=(0.73,0.75),fontsize=6)\n",
-    "ax=plt.subplot(1,2,2)\n",
-    "data=np.loadtxt(intDir+\"DipoleMoment.dat\")\n",
-    "#np.savetxt(outDir+\"data\\\\f1(2)PotentialEnergy.dat\",data)\n",
-    "x=data[:,0]\n",
-    "y=data[:,2]\n",
-    "setlabelm(ax,'(b)',[-0.2,1.001])\n",
-    "plt.xlabel(\"$R$  (a.u.)\")\n",
-    "plt.ylabel(\"Intensity (D)\")\n",
-    "plt.plot(data[:,0],data[:,1],'k-',data[:,0],data[:,2],'r-.',data[:,0],data[:,3],'b--')\n",
-    "plt.xlim(1.75,11)\n",
-    "plt.legend([\"$\\\\mu_{_{XX}} $\",\"$\\\\mu_{_{AA}} $\",\"$\\\\mu_{_{XA}} $\"],loc=(0.60,0.05))\n",
-    "plt.tight_layout()\n",
-    "plt.savefig(outDir+\"Fig1.\"+figureType,transparent=True,dpi=figureDPI)\n",
+    "inDir=dir+\"molecularData\\\\\"\n",
+    "with plt.style.context(['science', 'vibrant']):\n",
+    "    plt.figure(figsize=(cm2inch(16),cm2inch(6.5)))\n",
+    "    ax=plt.subplot(1,2,1)\n",
+    "    data=np.loadtxt(inDir+\"PotentialEnergy.dat\")\n",
+    "    #np.savetxt(outDir+\"data\\\\f1(1)PotentialEnergy.dat\",data)\n",
+    "    x =data[:,0]\n",
+    "    y1=data[:,1]\n",
+    "    y2=data[:,2]\n",
+    "    y3=data[:,3]\n",
+    "    #plt.grid(False)\n",
+    "    x=x\n",
+    "    y=y3\n",
+    "    setlabelm(ax,'(a)',[-0.2,1.001])\n",
+    "    plt.xlabel('$R$ (a.u.)')\n",
+    "    plt.ylabel(\"Intensity (a.u.)\")\n",
+    "    plt.plot(x,y1,'k-',x,y2,'r-.',x,y3,'b--')\n",
+    "    plt.xlim(1.75,11)\n",
+    "    plt.fill_between(x,y3,x,y3+0.2)\n",
+    "    plt.ylim(-0.05,0.5)\n",
+    "    plt.legend(['$X^1\\\\Sigma^+$','$A^1 \\\\Sigma ^+$','$X^2 \\\\Sigma ^+$'],loc=(0.73,0.65),fontsize=6)\n",
+    "    ax=plt.subplot(1,2,2)\n",
+    "    data=np.loadtxt(inDir+\"DipoleMoment.dat\")\n",
+    "    #np.savetxt(outDir+\"data\\\\f1(2)PotentialEnergy.dat\",data)\n",
+    "    x=data[:,0]\n",
+    "    y=data[:,2]\n",
+    "    setlabelm(ax,'(b)',[-0.2,1.001])\n",
+    "    plt.xlabel(\"$R$  (a.u.)\")\n",
+    "    plt.ylabel(\"Intensity (D)\")\n",
+    "    plt.plot(data[:,0],data[:,1],'k-',data[:,0],data[:,2],'r-.',data[:,0],data[:,3],'b--')\n",
+    "    plt.xlim(1.75,11)\n",
+    "    plt.legend([\"$\\\\mu_{_{XX}} $\",\"$\\\\mu_{_{AA}} $\",\"$\\\\mu_{_{XA}} $\"],loc=(0.60,0.05))\n",
+    "    plt.tight_layout()\n",
+    "    plt.savefig(outDir+\"Fig1.\"+figureType,transparent=True,dpi=figureDPI)\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inDir=dir+'data\\\\'\n",
+    "data=np.loadtxt(inDir+'f2(12).dat')\n",
+    "eSum=[len(data)]\n",
+    "for i in range(data.shape[1]-4):\n",
+    "    print(i)\n",
+    "    eSum= eSum+  data[:,i+1] \n",
+    "ax=plt.gca()\n",
+    "plt.plot(data[:,0],eSum)\n",
+    "plt.xlabel('Time (fs)')\n",
+    "plt.ylabel('$E(t)$ (a.u.)')\n",
+    "sciforyax(ax)\n",
+    "# plt.legend(')\n",
+    "plt.savefig(outDir+\"Fig2(1).\"+figureType,dpi=figureDPI,bbox_inches=\"tight\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data=np.loadtxt(inDir+'f2(4).dat')\n",
+    "t=data[:,0]\n",
+    "r=data[:,1]\n",
+    "p=data[:,2]\n",
+    "plt.tricontourf(t,r,p,levels,cmap='jet')\n",
+    "plt.xlabel('Time (fs)')\n",
+    "plt.ylabel('$R$ (a.u.)')\n",
+    "plt.ylim(min(r),10.0)\n",
+    "plt.colorbar()\n",
+    "plt.savefig(outDir+'Fig2(4).'+figureType,dpi=figureDPI)\n"
    ]
   },
   {
