--- a/Python/Ionplot.ipynb
+++ b/Python/Ionplot.ipynb
@@ -6,11 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir='D:\\\\dataofpro\\\\output\\\\'\n",
-    "# dir='D:\\\\doc\\\\data\\\\PMD\\\\t3\\\\'\n",
-    "# dir='D:\\\\doc\\\\data\\\\ion1test\\\\twopump\\\\twopumpdelay42\\\\'\n",
-    "# dir='D:\\\\doc\\\\data\\\\twocolor\\\\v2j1\\\\output\\\\'\n",
-    "# dir='D:\\\\doc\\\\data\\\\ion1test\\\\all\\\\'"
+    "dir='D:\\\\dataofpro\\\\output\\\\'"
    ]
   },
   {
@@ -27,9 +23,12 @@
     "from matplotlib.ticker import MaxNLocator\n",
     "import os\n",
     "from matplotlib import ticker\n",
+    "import scienceplots\n",
+    "plt.style.use(['science','nature'])\n",
+    "\n",
     "plt.rcParams['ytick.right']  =plt.rcParams['xtick.top'] =True\n",
-    "xminorLocator=MultipleLocator(2)\n",
-    "#plt.rcParams['set_minor_locator']=xminorLocator\n",
+    "# xminorLocator=MultipleLocator(2)\n",
+    "# plt.rcParams['set_minor_locator']=xminorLocator\n",
     "# plt.rcParams.update({\n",
     "#     \"text.usetex\": True,\n",
     "#     \"font.family\": \"sans-serif\",\n",
@@ -51,21 +50,21 @@
     "def cm2inch(value):\n",
     "    return value/2.54\n",
     "\n",
-    "plt.rcParams['figure.figsize'] = (cm2inch(8), cm2inch(6.5))\n",
+    "# plt.rcParams['figure.figsize'] = (cm2inch(8), cm2inch(6.5))\n",
     "#plt.rcParams['figure.figsize'] =(4,3)#(3.5,2.5)\n",
-    "plt.rcParams['lines.linewidth'] = 1\n",
+    "# plt.rcParams['lines.linewidth'] = 1\n",
     "plt.rcParams['xtick.direction'] = 'in'\n",
     "plt.rcParams['ytick.direction'] = 'in'\n",
-    "plt.rcParams['xtick.labelsize'] = 6\n",
-    "plt.rcParams['ytick.labelsize'] = 6\n",
-    "plt.rcParams['legend.fontsize'] = 6\n",
+    "# plt.rcParams['xtick.labelsize'] = 6\n",
+    "# plt.rcParams['ytick.labelsize'] = 6\n",
+    "# plt.rcParams['legend.fontsize'] = 6\n",
     "\n",
     "from matplotlib import rcParams\n",
     "config = {\n",
     "    \"text.usetex\": False,\n",
     "    \"font.family\":'serif',\n",
     "    # \"font.family\":'stix',\n",
-    "    \"font.size\": 8,\n",
+    "    # \"font.size\": 8,\n",
     "    \"mathtext.fontset\":'stix',\n",
     "    # \"font.serif\": ['SimSun'],\n",
     "}\n",
@@ -171,10 +170,6 @@
     "    return\n",
     "\n",
     "\n",
-    "levels=100\n",
-    "figureDPI=1200\n",
-    "figureType=\"jpeg\"\n",
-    "timeUnit=\"fs\"\n",
     "def xyplot(int_dir,label_x,label_y,out_dir):\n",
     "    if os.path.exists(int_dir):\n",
     "        data=np.loadtxt(int_dir)\n",
@@ -197,6 +192,18 @@
     "        plt.show()\n",
     "    else:\n",
     "        print(\"The dataset does not exist. \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "levels=100\n",
+    "figureDPI=900\n",
+    "figureType=\"jpeg\"\n",
+    "timeUnit=\"fs\""
    ]
   },
   {
@@ -323,8 +330,12 @@
     "    y=dat[:,1]\n",
     "    z=dat[:,2]\n",
     "    plt.plot(x,z)\n",
+    "    nmax=np.argmax(z)\n",
+    "    nmin=np.argmin(z)\n",
+    "    cen=max(nmax,nmin)\n",
+    "    print(cen)\n",
     "    sciforyax(ax)\n",
-    "    # plt.xlim(7500,15000)\n",
+    "    plt.xlim(min(x),x[cen]*2-min(x))\n",
     "    plt.xlabel(\"$t$ (fs)\")\n",
     "    plt.ylabel(\"$E(t)$ (V/m)\")\n",
     "    plt.savefig(dir+'laser2.'+figureType,dpi=600)"
@@ -358,9 +369,9 @@
    "outputs": [],
    "source": [
     "intdir=dir\n",
-    "plt.figure(figsize=(cm2inch(16),cm2inch(13)))\n",
     "file=intdir+\"TimFreDis4.dat\"\n",
     "if fee(file):\n",
+    "    plt.figure(figsize=(cm2inch(16),cm2inch(13)))\n",
     "    ax=plt.axes([0.05,0.55,0.40,0.40])\n",
     "    setlabel(ax,'(a)')\n",
     "    plt.title('')\n",
@@ -377,6 +388,7 @@
     "    sciforyax(ax)\n",
     "file=intdir+\"p_vgr_vj\\\\p_vj_at_pos000100_fs.dat\"\n",
     "if fee(file):\n",
+    "    plt.figure(figsize=(cm2inch(16),cm2inch(13)))\n",
     "    ax=plt.axes([0.55,0.80,0.40,0.15])\n",
     "    setlabel(ax,'(b)')\n",
     "    data=np.loadtxt(file)\n",
@@ -403,6 +415,7 @@
     "    plt.colorbar(format=cbformat)\n",
     "file=intdir+\"p_exc_vj\\\\p_vj_at_pos000100_fs.dat\"\n",
     "if fee(file):\n",
+    "    plt.figure(figsize=(cm2inch(16),cm2inch(13)))\n",
     "    ax=plt.axes([0.55,0.55,0.40,0.15])\n",
     "    data=np.loadtxt(file)\n",
     "    x=data[:,0]\n",
@@ -428,6 +441,7 @@
     "    plt.colorbar(format=cbformat)\n",
     "file=intdir+\"excradWave.dat\"\n",
     "if fee(file):\n",
+    "    plt.figure(figsize=(cm2inch(16),cm2inch(13)))\n",
     "    ax=plt.axes([0.05,0.05,0.40,0.40])\n",
     "    setlabel(ax,'(c)')\n",
     "    data= np.loadtxt(file)\n",
@@ -441,6 +455,7 @@
     "    plt.ylabel(\"$R$ (a.u.)\")\n",
     "file=intdir+\"PopulationOfState.dat\"\n",
     "if fee(file):\n",
+    "    plt.figure(figsize=(cm2inch(16),cm2inch(13)))\n",
     "    ax=plt.axes([0.55,0.05,0.35,0.40])\n",
     "    setlabel(ax,'(d)')\n",
     "    data= np.loadtxt(file)\n",
@@ -449,7 +464,7 @@
     "    y2=data[:,2]\n",
     "    y3=data[:,3]\n",
     "    plt.plot(t,y1,'k-',t,y2,'r--',t,1-y1-y2,'b-.')\n",
-    "    plt.legend([\"Gro\",\"Exc\",\"Ion\"],loc=(0.7,0.70))\n",
+    "    plt.legend([\"Gro\",\"Exc\",\"Ion\"],loc=(0.65,0.65))\n",
     "    plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
     "    plt.ylabel(\"Population\")\n",
     "    plt.savefig(dir+\"TotalRG2E.\"+figureType,dpi=figureDPI,bbox_inches=\"tight\")\n",
@@ -476,7 +491,7 @@
     "    data=np.loadtxt(file)\n",
     "    plt.xlim(TimeTurn,TimeEnd)\n",
     "    ax=plt.plot(data[:,0],data[:,1],'k-',data[:,0],data[:,2],'r-',data[:,0],1-data[:,1]-data[:,2],'b-')\n",
-    "    plt.legend([\"Gro\",\"Exc\",\"Ion\"],loc=(0.7,0.70))\n",
+    "    plt.legend([\"Gro\",\"Exc\",\"Ion\"],loc=(0.65,0.65))\n",
     "    plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
     "    plt.ylabel(\"Population\")\n",
     "    plt.savefig(dir+\"PopulationOfState.\"+figureType,dpi=figureDPI,bbox_inches=\"tight\")"
@@ -544,7 +559,7 @@
    "source": [
     "file=dir+'Laser.dat'\n",
     "if fee(file):\n",
-    "    plt.figure(figsize=((8*2/2.54),(6.5*2/2.54)))\n",
+    "    plt.figure(figsize=((8*6/2.54),(6.5*6/2.54)))\n",
     "    data=np.loadtxt(dir+\"Laser.dat\")\n",
     "    x =data[:,0]\n",
     "    y1=data[:,1]\n",
@@ -591,9 +606,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#pot\n",
-    "\n",
-    "\n",
     "if os.path.exists(dir+\"pott.dat\"):\n",
     "    data=np.loadtxt(dir+\"Pott.dat\")\n",
     "elif fee(dir+\"potential.dat\"):\n",
@@ -645,9 +657,10 @@
    "source": [
     "#Electrical field\n",
     "import matplotlib.ticker as mtick\n",
-    "plt.figure(figsize=(cm2inch(8*3),cm2inch(6.5)))\n",
+    "\n",
     "file=dir+\"Laser.dat\"\n",
     "if fee(file):\n",
+    "    plt.figure(figsize=(cm2inch(8*3),cm2inch(6.5)))\n",
     "    ax=plt.subplot(1,3,1)\n",
     "    setlabel(ax,\"(a)\")\n",
     "    plt.title(\"Electrical field\")\n",
@@ -822,13 +835,46 @@
     "    plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
     "    plt.ylabel(\"$\\\\theta$ $(\\\\pi)$\")\n",
     "    setlabel(ax,\"(d)\")\n",
-    "plt.subplots_adjust(left=0.125,\n",
-    "                    bottom=0.1, \n",
-    "                    right=0.9, \n",
-    "                    top=0.9, \n",
-    "                    wspace=0.3, \n",
-    "                    hspace=0.3)\n",
-    "plt.savefig(dir+\"WaveAngDis.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)\n",
+    "    plt.subplots_adjust(left=0.125,\n",
+    "                        bottom=0.1, \n",
+    "                        right=0.9, \n",
+    "                        top=0.9, \n",
+    "                        wspace=0.3, \n",
+    "                        hspace=0.3)\n",
+    "    plt.savefig(dir+\"WaveAngDis.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)\n",
+    "    plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data =np.loadtxt(dir+\"groangwave.dat\")\n",
+    "#plt.style.use('_mpl-gallery-nogrid')\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]/180\n",
+    "z=data[:,2]\n",
+    "# plt.xlim(min(x), max(x))\n",
+    "#plt.ylim(min(y),180)\n",
+    "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
+    "plt.colorbar(format=cbformat)\n",
+    "plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
+    "plt.ylabel(\"$\\\\theta$ $(\\\\pi)$\")\n",
+    "file=dir+'ori_ali_1.dat'\n",
+    "if fee(file):\n",
+    "    dat=np.loadtxt(file)\n",
+    "    ax=plt.gca()\n",
+    "    x=dat[:,0]\n",
+    "    y=dat[:,1]\n",
+    "    z=dat[:,2]\n",
+    "    plt.plot(x,y)\n",
+    "    # sciforyax(ax)\n",
+    "    # plt.xlim(7500,15000)\n",
+    "    plt.xlabel(\"$t$ (fs)\")\n",
+    "    plt.ylabel(\"$\\\\langle \\mathrm{cos}\\\\theta\\\\rangle$\")\n",
+    "plt.savefig(dir+\"groangwave.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)\n",
     "plt.show()\n"
    ]
   },
@@ -1002,17 +1048,17 @@
     "    plt.colorbar(format=cbformat)\n",
     "    plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
     "    plt.ylabel(\"$R$ (a.u.)\")\n",
-    "plt.subplots_adjust(left=0.125,\n",
-    "                    bottom=0.1, \n",
-    "                    right=0.9, \n",
-    "                    top=0.9, \n",
-    "                    wspace=0.2, \n",
-    "                    hspace=0.3)\n",
-    "#fig.subplots_adjust(right=0.9)\n",
-    "# p = add_axes([0.92, 0.12, 0.015, .78 ])#位置[左,下,右,上]\n",
-    "# cb = fig.colorbar(sp4, cax=p)\n",
-    "plt.savefig(dir+\"WaveRadDis.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)\n",
-    "plt.show()\n"
+    "    plt.subplots_adjust(left=0.125,\n",
+    "                        bottom=0.1, \n",
+    "                        right=0.9, \n",
+    "                        top=0.9, \n",
+    "                        wspace=0.2, \n",
+    "                        hspace=0.3)\n",
+    "    #fig.subplots_adjust(right=0.9)\n",
+    "    # p = add_axes([0.92, 0.12, 0.015, .78 ])#位置[左,下,右,上]\n",
+    "    # cb = fig.colorbar(sp4, cax=p)\n",
+    "    plt.savefig(dir+\"WaveRadDis.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)\n",
+    "    plt.show()\n"
    ]
   },
   {
@@ -1274,16 +1320,16 @@
     "    ax1.set_xlabel('Time ('+timeUnit+')')\n",
     "    ax1.set_ylabel('$\\\\langle{\\\\rm cos\\\\, } \\\\theta \\\\rangle$', color=color)\n",
     "    ax1.plot(x, y1, color=color)\n",
-    "    sciforyax(ax1)\n",
+    "    # sciforyax(ax1)\n",
     "    ax1.tick_params(axis='y', labelcolor=color)\n",
-    "\n",
+    "    plt.xlim(0,5000)\n",
     "    ax2 = ax1.twinx()  # instantiate a second axes that shares the same x-axis\n",
     "\n",
     "    color = 'tab:blue'\n",
     "    ax2.set_ylabel('$\\\\langle {\\\\rm cos^2} \\\\theta \\\\rangle$', color=color)  # we already handled the x-label with ax1\n",
     "    ax2.plot(x, y2,'--', color=color)\n",
     "    ax2.tick_params(axis='y', labelcolor=color)\n",
-    "    sciforyax(ax2)\n",
+    "    # sciforyax(ax2)\n",
     "    fig.tight_layout()  # otherwise the right y-label is slightly clipped\n",
     "    plt.savefig(dir+\"GroundAlignmentAndOrientation.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)\n",
     "    plt.show()"
@@ -1375,10 +1421,11 @@
    "outputs": [],
    "source": [
     "from matplotlib.ticker import MaxNLocator\n",
-    "plt.figure(figsize=((16/2.54),(13/2.54)))\n",
+    "\n",
     "\n",
     "file=dir+'p_vgr_v.dat'\n",
     "if fee(file):\n",
+    "    plt.figure(figsize=((16/2.54),(13/2.54)))\n",
     "    ax1=plt.subplot(2,1,1)\n",
     "    DataPop =np.loadtxt(dir+\"p_vgr_v.dat\")\n",
     "    #plt.style.use('_mpl-gallery-nogrid')\n",
@@ -1474,9 +1521,10 @@
    "outputs": [],
    "source": [
     "#eneTRJV\n",
-    "plt.figure(tight_layout=True,figsize=((8*2/2.54),(6.5*2/2.54)))\n",
+    "\n",
     "file=dir+'eneTRJVgro.dat'\n",
     "if fee(file):\n",
+    "    plt.figure(tight_layout=True,figsize=((8*2/2.54),(6.5*2/2.54)))\n",
     "    ax1=plt.axes([0.10,0.55,0.35,0.35])\n",
     "    setlabel(ax1,'(a)')\n",
     "    data=np.loadtxt(dir+'eneTRJVgro.dat')\n",
@@ -1558,8 +1606,8 @@
     "    #ax.set_title('World population')\n",
     "    plt.xlabel('Time (fs)')\n",
     "    plt.ylabel('Energy (a.u.)')\n",
-    "plt.savefig(dir+'EnergyRJV.'+figureType,bbox_inches ='tight',dpi=figureDPI)\n",
-    "plt.show()"
+    "    plt.savefig(dir+'EnergyRJV.'+figureType,bbox_inches ='tight',dpi=figureDPI)\n",
+    "    plt.show()"
    ]
   },
   {
@@ -1664,10 +1712,11 @@
    "source": [
     "#ktot\n",
     "intDir=dir\n",
-    "fig = plt.figure(constrained_layout=True)\n",
-    "plt.figure(figsize=(16/2.54,13/2.54))\n",
+    "\n",
     "file=intDir+'ktot.dat'\n",
     "if fee(file):\n",
+    "    fig = plt.figure(constrained_layout=True)\n",
+    "    plt.figure(figsize=(16/2.54,13/2.54))\n",
     "    data=np.loadtxt(intDir+'ktot.dat')\n",
     "    x=data[:,0]\n",
     "    y=data[:,1]\n",
@@ -1713,6 +1762,15 @@
     "                        hspace=0.3)\n",
     "    plt.savefig(outDir+'Ktot.'+figureType,bbox_inches ='tight',dpi=figureDPI)\n",
     "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stop"
    ]
   },
   {
@@ -1981,14 +2039,13 @@
     "    data=np.loadtxt(dir+\"Pott.dat\")\n",
     "else:\n",
     "    data=np.loadtxt(dir+\"PotentialEnergy.dat\")\n",
-    "\n",
     "x=data[:,0]\n",
     "y1=data[:,1]\n",
     "y2=data[:,2]\n",
     "y3=data[:,3]\n",
     "plt.xlabel(\"$\\t{R}$ (a.u.) \")\n",
     "plt.ylabel(\"Energy (a.u.)\")\n",
-    "plt.plot(x,y1,'k-',x,y2,'r-.',x,y3,'--')\n",
+    "plt.plot(x,y1,'k-',x,y2,'r-.',x,y3,'b--')\n",
     "plt.ylim(-0.05,0.5)\n",
     "plt.xlim(1.75,11.)\n",
     "plt.fill_between(x,y3,x,y3+0.2)\n",
@@ -2036,7 +2093,7 @@
     "#x=x\n",
     "#y=y1\n",
     "#plt.text(min(x)+(max(x)-min(x))*0.95,min(y)+(max(y)-min(y))*0.95,\"(a)\")\n",
-    "plt.plot(x,y1,'k-')\n",
+    "plt.plot(x,y1)\n",
     "#plt.savefig(dir+\"Absorption.\"+figureType,bbox_inches=\"tight\",transparent=True,dpi=figureDPI)\n",
     "plt.show()"
    ]
