--- a/Python/mplot.ipynb
+++ b/Python/mplot.ipynb
@@ -160,16 +160,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data=np.loadtxt(dir+\"gaussianpulse.dat\")\n",
-    "x=data[:,0]\n",
-    "y=data[:,1]\n",
-    "ax=plt.gca()\n",
-    "plt.plot(x,y)\n",
-    "# plt.xlim(0,5)\n",
-    "plt.xlabel(\"Time (fs)\")\n",
-    "plt.ylabel(\"Instensity (a.u.)\")\n",
-    "sciforyax(ax)\n",
-    "plt.savefig(dir+\"pulse1.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)"
+    "# data=np.loadtxt(dir+\"gaussianpulse.dat\")\n",
+    "# x=data[:,0]\n",
+    "# y=data[:,1]\n",
+    "# ax=plt.gca()\n",
+    "# plt.plot(x,y)\n",
+    "# # plt.xlim(0,5)\n",
+    "# plt.xlabel(\"Time (fs)\")\n",
+    "# plt.ylabel(\"Instensity (a.u.)\")\n",
+    "# sciforyax(ax)\n",
+    "# plt.savefig(dir+\"pulse1.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)"
    ]
   },
   {
@@ -335,7 +335,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9 (tags/v3.10.9:1dd9be6, Dec  6 2022, 20:01:21) [MSC v.1934 64 bit (AMD64)]"
+   "version": "3.10.9"
   },
   "orig_nbformat": 4,
   "vscode": {
