--- a/Python/Ionplot.ipynb
+++ b/Python/Ionplot.ipynb
@@ -6,7 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir='D:\\\\dataofpro\\\\output\\\\'"
+    "dir='D:\\\\dataofpro\\\\output\\\\'\n",
+    "dir='D:\\\\excited\\\\v5\\\\output\\\\'"
    ]
   },
   {
@@ -212,6 +213,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "TimeBegin=0.0\n",
+    "TimeEnd=30\n",
+    "dt=0.1\n",
+    "file=dir+'Laserfield.dat'\n",
+    "if fee(file): \n",
+    "    TimeBegin =(min(np.loadtxt(dir+'Laserfield.dat')[:,0]))\n",
+    "    TimeEnd   =(max(np.loadtxt(dir+'Laserfield.dat')[:,0]))\n",
+    "    dt=np.loadtxt(dir+'LaserField.dat')[1,0]-np.loadtxt(dir+'LaserField.dat')[0,0]\n",
+    "file=dir+'Laser.dat'\n",
+    "if fee(file):\n",
+    "    TimeBegin =(min(np.loadtxt(dir+'Laser.dat')[:,0]))\n",
+    "    TimeEnd   =(max(np.loadtxt(dir+'Laser.dat')[:,0]))\n",
+    "    dt=np.loadtxt(dir+'Laser.dat')[1,0]-np.loadtxt(dir+'Laser.dat')[0,0]\n",
+    "file=dir+'timeenergyspctra.dat'\n",
+    "if fee(file):\n",
+    "    TimeTurn=(min(np.loadtxt(dir+'timeenergyspctra.dat')[:,0])) \n",
+    "else:\n",
+    "    TimeTurn=TimeBegin\n",
+    "if TimeEnd<5:\n",
+    "    print('The unit of time is ps!')\n",
+    "    timeUnit=\"ps\"\n",
+    "print(' dt= ',dt)\n",
+    "turnPoint= 0\n",
+    "turnPoint= int((TimeTurn-TimeBegin)/dt)\n",
+    "print(' TurnPoint=',turnPoint)\n",
+    "print(' Begin time:',TimeBegin,timeUnit+'\\n End time  :',TimeEnd,timeUnit+' \\n Turn time :',TimeTurn,timeUnit)\n",
+    "# TimeTurn=-50\n",
+    "# turnPoint=0\n",
+    "# TimeBegin=-50\n",
+    "# TimeEnd=150"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def plot_x2y(x, label_x,y1,label_y1, y2,label_y2):\n",
     "    fig, ax1 = plt.subplots()\n",
     "    color = 'tab:red'\n",
@@ -263,44 +302,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "TimeBegin=0.0\n",
-    "TimeEnd=30\n",
-    "dt=0.1\n",
-    "file=dir+'Laserfield.dat'\n",
-    "if fee(file): \n",
-    "    TimeBegin =(min(np.loadtxt(dir+'Laserfield.dat')[:,0]))\n",
-    "    TimeEnd   =(max(np.loadtxt(dir+'Laserfield.dat')[:,0]))\n",
-    "    dt=np.loadtxt(dir+'LaserField.dat')[1,0]-np.loadtxt(dir+'LaserField.dat')[0,0]\n",
-    "file=dir+'Laser.dat'\n",
-    "if fee(file):\n",
-    "    TimeBegin =(min(np.loadtxt(dir+'Laser.dat')[:,0]))\n",
-    "    TimeEnd   =(max(np.loadtxt(dir+'Laser.dat')[:,0]))\n",
-    "    dt=np.loadtxt(dir+'Laser.dat')[1,0]-np.loadtxt(dir+'Laser.dat')[0,0]\n",
-    "file=dir+'timeenergyspctra.dat'\n",
-    "if fee(file):\n",
-    "    TimeTurn=(min(np.loadtxt(dir+'timeenergyspctra.dat')[:,0])) \n",
-    "else:\n",
-    "    TimeTurn=TimeBegin\n",
-    "if TimeEnd<5:\n",
-    "    print('The unit of time is ps!')\n",
-    "    timeUnit=\"ps\"\n",
-    "print(' dt= ',dt)\n",
-    "turnPoint= 0\n",
-    "turnPoint= int((TimeTurn-TimeBegin)/dt)\n",
-    "print(' TurnPoint=',turnPoint)\n",
-    "print(' Begin time:',TimeBegin,timeUnit+'\\n End time  :',TimeEnd,timeUnit+' \\n Turn time :',TimeTurn,timeUnit)\n",
-    "# TimeTurn=-50\n",
-    "# turnPoint=0\n",
-    "# TimeBegin=-50\n",
-    "# TimeEnd=150"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "file=dir+'laser.dat'\n",
     "if fee(file):\n",
     "    dat=np.loadtxt(file)\n",
@@ -310,7 +311,7 @@
     "    z=dat[:,2]\n",
     "    plt.plot(x,y)\n",
     "    sciforyax(ax)\n",
-    "    plt.xlim(0,10000)\n",
+    "    # plt.xlim(0,10000)\n",
     "    plt.xlabel(\"$t$ (fs)\")\n",
     "    plt.ylabel(\"$E(t)$ (V/m)\")\n",
     "    plt.savefig(dir+'laser1.'+figureType,dpi=600)"
@@ -329,13 +330,15 @@
     "    x=dat[:,0]\n",
     "    y=dat[:,1]\n",
     "    z=dat[:,2]\n",
-    "    plt.plot(x,z)\n",
+    "    p=dat[:,3]\n",
+    "    plt.plot(x,z,'r-',x,p,'b-')\n",
     "    nmax=np.argmax(z)\n",
     "    nmin=np.argmin(z)\n",
     "    cen=max(nmax,nmin)\n",
     "    print(cen)\n",
     "    sciforyax(ax)\n",
-    "    plt.xlim(min(x),x[cen]*2-min(x))\n",
+    "    # plt.xlim(min(x),x[cen]*2-min(x))\n",
+    "    plt.xlim(480,TimeEnd)\n",
     "    plt.xlabel(\"$t$ (fs)\")\n",
     "    plt.ylabel(\"$E(t)$ (V/m)\")\n",
     "    plt.savefig(dir+'laser2.'+figureType,dpi=600)"
@@ -1322,7 +1325,7 @@
     "    ax1.plot(x, y1, color=color)\n",
     "    # sciforyax(ax1)\n",
     "    ax1.tick_params(axis='y', labelcolor=color)\n",
-    "    plt.xlim(0,5000)\n",
+    "    # plt.xlim(0,5000)\n",
     "    ax2 = ax1.twinx()  # instantiate a second axes that shares the same x-axis\n",
     "\n",
     "    color = 'tab:blue'\n",
@@ -1481,7 +1484,7 @@
     "                        top=0.9, \n",
     "                        wspace=0.25, \n",
     "                        hspace=0.3)\n",
-    "    plt.savefig(dir+\"P_v.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)"
+    "plt.savefig(dir+\"P_v.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)"
    ]
   },
   {
