--- a/Python/mplot.ipynb
+++ b/Python/mplot.ipynb
@@ -151,7 +151,45 @@
     "plt.xlabel(\"Time (ps)\")\n",
     "plt.ylabel(\"Instensity (V/m)\")\n",
     "sciforyax(ax)\n",
-    "plt.savefig(dir+\"pulse.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)"
+    "plt.savefig(dir+\"pulse.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)\n",
+    "plt.show()\n",
+    "plt.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data=np.loadtxt(dir+\"fre_field.dat\")\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]\n",
+    "ax=plt.gca()\n",
+    "plt.plot(x,y)\n",
+    "# plt.xlim(0,5)\n",
+    "plt.xlabel(\"Time (fs)\")\n",
+    "plt.ylabel(\"Instensity (a.u.)\")\n",
+    "sciforyax(ax)\n",
+    "plt.savefig(dir+\"Field_Frequency.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data=np.loadtxt(dir+\"Timdis1.dat\")\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]\n",
+    "ax=plt.gca()\n",
+    "plt.plot(x,y)\n",
+    "# plt.xlim(0,5)\n",
+    "plt.xlabel(\"Time (fs)\")\n",
+    "plt.ylabel(\"Instensity (a.u.)\")\n",
+    "sciforyax(ax)\n",
+    "plt.savefig(dir+\"Field_time.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)"
    ]
   },
   {
@@ -182,8 +220,8 @@
     "plt.figure(figsize=(8,6))\n",
     "data=np.loadtxt(dir+\"ori+ali.dat\")\n",
     "x=data[:,0]\n",
-    "y1=data[:,1]\n",
-    "y2=data[:,2]\n",
+    "y1=data[:,2]\n",
+    "y2=data[:,3]\n",
     "\n",
     "fig, ax1 = plt.subplots()\n",
     "\n",
@@ -192,7 +230,7 @@
     "ax1.set_ylabel('$\\\\langle{\\\\rm  cos} \\\\theta \\\\rangle$', color=color)\n",
     "ax1.plot(x, y1, color=color)\n",
     "ax1.tick_params(axis='y', labelcolor=color)\n",
-    "# plt.xlim(0, 5)\n",
+    "plt.xlim(0, 5)\n",
     "ax2 = ax1.twinx()  # instantiate a second axes that shares the same x-axis\n",
     "\n",
     "color = 'tab:blue'\n",
@@ -202,7 +240,8 @@
     "\n",
     "fig.tight_layout()  # otherwise the right y-label is slightly clipped\n",
     "plt.savefig(dir+\"cos.\",bbox_inches = 'tight',dpi=figureDPI)\n",
-    "plt.show()"
+    "plt.show()\n",
+    "plt.close()"
    ]
   },
   {
@@ -224,7 +263,9 @@
     "plt.legend(legend)\n",
     "plt.xlabel(\"Time (ps)\")\n",
     "plt.ylabel(\"Population\")\n",
-    "plt.savefig(dir+\"pop_j_t.\"+figureType,dpi=figureDPI)"
+    "plt.savefig(dir+\"pop_j_t.\"+figureType,dpi=figureDPI)\n",
+    "plt.show()\n",
+    "plt.close()"
    ]
   },
   {
@@ -335,7 +376,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.10"
   },
   "orig_nbformat": 4,
   "vscode": {
